# texthooks

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  fix_ligatures.py  fix_smartquotes.py  justfile  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml
scripts/: bump-version.py  check-hook-name-length.py
src/texthooks/: _common.py  _recorders.py  alphabetize_codeowners.py  fix_ligatures.py  fix_smartquotes.py  fix_spaces.py  fix_unicode_dashes.py  forbid_bidi_controls.py  macro_expand.py
tests/acceptance/: conftest.py  test_alphabetize_codeowners.py  test_fix_ligatures.py  test_fix_smartquotes.py  test_fix_unicode_dashes.py  test_forbid_bidi_controls.py  test_macro_expand.py
tests/unit/: test_cli_parsing.py
