[metadata]
name = texthooks
version = 0.1.0
description = pre-commit fixers and linters for handling text files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/texthooks
author = Stephen Rosen
author_email = sirosen0@gmail.com

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
include_package_data = true
package_dir=
    =src
packages=find:

install_requires =
    identify<2.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    fix-smartquotes = texthooks.fix_smartquotes:main

[isort]
profile = black
