[metadata]
name = texthooks
version = 0.1.0
description = pre-commit fixers and linters for handling text files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/texthooks
author = Stephen Rosen
author_email = sirosen0@gmail.com

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
include_package_data = true
package_dir=
    =src
packages=find:

install_requires =
    identify<2.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    fix-smartquotes = texthooks.fix_smartquotes:main
    fix-ligatures = texthooks.fix_ligatures:main

[options.extras_require]
dev =
    pytest<7
    pytest-cov<3
    pytest-xdist<3

[isort]
profile = black

[flake8]
exclude = .git,__pycache__,.eggs,venv,.venv
max-line-length = 88
ignore = W503,W504,E203,

[mypy]
ignore_missing_imports = true
