[metadata]
name = texthooks
version = 0.6.6
description = pre-commit fixers and linters for handling text files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/texthooks
author = Stephen Rosen
author_email = sirosen0@gmail.com

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
include_package_data = true
package_dir=
    =src
packages=find:

install_requires =
    identify>=2.0,<3.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    alphabetize-codeowners = texthooks.alphabetize_codeowners:main
    fix-smartquotes = texthooks.fix_smartquotes:main
    fix-spaces = texthooks.fix_spaces:main
    fix-ligatures = texthooks.fix_ligatures:main
    forbid-bidi-controls = texthooks.forbid_bidi_controls:main
    macro-expand = texthooks.macro_expand:main

[options.extras_require]
dev =
    pytest<9
    pytest-cov<6
    pytest-xdist<4

[isort]
profile = black

[flake8]
exclude = .git,__pycache__,.eggs,venv,.venv
max-line-length = 88
ignore = W503,W504,E203,

[mypy]
ignore_missing_imports = true
